# emosh

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  RELEASE_SETUP.md  dist-workspace.toml  emojis.toml  enhance_emojis.js  install.sh  package.json  plan.md  prompt.md  todo  update_signal_keywords.js
.github/workflows/: ci.yml  release.yml  version-check.yml
benches/: search_bench.rs
src/: cli.rs  clipboard.rs  config.rs  lib.rs  main.rs  treats.rs
src/emoji/: data.rs  mod.rs  search.rs
src/latex/: convert.rs  mappings.rs  mod.rs
src/ui/: app.rs  input.rs  mod.rs  render.rs
tests/: integration.rs  search_tests.rs
