[package]
name = "emosh"
version = "0.1.0"
edition = "2021"
authors = ["Emosh Contributors"]
description = "Find relevant emoji from text on the command-line"
repository = "https://github.com/yourusername/emosh"
homepage = "https://github.com/yourusername/emosh"
license = "MIT"
keywords = ["emoji", "cli", "search", "fuzzy"]
categories = ["command-line-utilities"]

[[bin]]
name = "emosh"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Fuzzy search
fuzzy-matcher = "0.3"

# Clipboard operations
arboard = "3.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Configuration
directories = "5.0"

# Error handling
anyhow = "1.0"

# Lazy static initialization
once_cell = "1.20"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"

# Benchmarking
criterion = "0.5"

[[bench]]
name = "search_bench"
harness = false

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols
panic = "abort"          # Smaller panic handler

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-dist configuration
[package.metadata.dist]
# Specify your Homebrew tap (format: username/homebrew-tapname)
# Example: tap = "yourusername/homebrew-emosh"
# tap = "yourusername/homebrew-emosh"

# Debian/Ubuntu package metadata (for cargo-deb)
[package.metadata.deb]
maintainer = "Emosh Contributors <noreply@example.com>"
copyright = "2025, Emosh Contributors <noreply@example.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A blazing-fast emoji finder for the command line. \
Features hybrid search combining exact keyword matching with fuzzy search, \
interactive TUI mode, and skin tone support."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/emosh", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/emosh/", "644"],
]

# RPM package metadata (for cargo-generate-rpm)
[package.metadata.generate-rpm]
license = "MIT"
assets = [
    { source = "target/release/emosh", dest = "/usr/bin/emosh", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/emosh/README.md", mode = "644" },
]
